--- a/Quest5_PA.html
+++ b/Quest5_PA.html
@@ -1,63 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body bgcolor="yellow"><center>
-    
-<font size="9" id="retorno"></font><br> <br><br> <font size="9"> A ordem 
-    decrescente das notas desse aluno é: </font> <br>
-<font size="9" id="Num"></font>
 
-<p id="retorno"></p><br>
-<p id="Num"></p>
+<body bgcolor="yellow">
+    <center>
 
-<script>
+        <font size="9" id="retorno"></font>
 
+        <script>
 
-let NomeAluno = prompt("Digite o nome do aluno");
-let Nota1 = Number(prompt("Digite a primeira nota desse aluno"));
-let Nota2 = Number(prompt("Digite a segunda nota desse aluno"));
-let Nota3 = Number(prompt("Digite a terceira nota desse aluno"));
-let MediaNotas = Nota1 + Nota2 + Nota3 / 3 ;
-let retorno = '';
-let Num = [Nota1, Nota2,Nota3];
-
-
-if(MediaNotas >= 6) {
-    retorno = "A média do aluno" + " " + NomeAluno +  " " +  "</br>" +"é " + MediaNotas + " .O aluno foi aprovado";
-} else if(MediaNotas < 6) {
-    retorno = "A média do aluno" + " " + NomeAluno + " " + "</br>" + "é " + MediaNotas + " .O aluno foi reprovado";
-}
-
-/*switch (Number) {
-    case Nota1 > Nota2 && Nota2 > Nota3:
-      Num =   String (Nota1) + String(Nota2) + String(Nota3) 
-        break;
-        case Nota1 > Nota2 && Nota3 > Nota2:
-      Num =   String (Nota1) + String(Nota3) + String(Nota2)
-      break; 
-    default:
-        break;
-}*/
-
-function compararDecrescente(a, b) {
-    return b - a;
-    
-}
-
-Num.sort(compararDecrescente);
-console.log(Num)
-
-document.getElementById("retorno").innerHTML = retorno;
-document.getElementById("Num").innerHTML = Num;
+            let Data = prompt("Digite uma data seguindo este exemplo (DD/MM/AAAA)");
+            let parte = Data.split("/");
+            let dia = parseInt(parte[0]);
+            let mes = parseInt(parte[1]);
+            let ano = parseInt(parte[2]);
+            let dataCompleta = '';
 
 
 
-</script>
 
-</center>
+            switch (true) {
+                case mes == 1:
+                    dataCompleta = dia + " de Janeiro de " + ano
+                    break;
+                case mes == 2:
+                    dataCompleta = dia + " de Fevereiro de " + ano
+                    break;
+                case mes == 3:
+                    dataCompleta = dia + " de Março de " + ano
+                    break;
+                case mes == 4:
+                    dataCompleta = dia + " de Abril de " + ano
+                    break;
+                case mes == 5:
+                    dataCompleta = dia + " de Maio de " + ano
+                    break;
+                case mes == 6:
+                    dataCompleta = dia + " de Junho de " + ano
+                    break;
+                case mes == 7:
+                    dataCompleta = dia + " de Julho de " + ano
+                    break;
+                case mes == 8:
+                    dataCompleta = dia + " de Agosto de " + ano
+                    break;
+                case mes == 9:
+                    dataCompleta = dia + " de Setembro de " + ano
+                    break;
+                case mes == 10:
+                    dataCompleta = dia + " de Outubro de " + ano
+                    break;
+                case mes == 11:
+                    dataCompleta = dia + " de Novembro de " + ano
+                    break;
+                case mes == 12:
+                    dataCompleta = dia + " de Dezembro de " + ano
+                    break;
+                default: 
+                dataCompleta = "A data escrita está fora da formatação do exemplo"
+                    break;
+            }
+
+            document.getElementById("retorno").innerHTML = "A data escrita foi: </br>" + Data + "</br></br>" + "A data escrita por extenso é: " + "</br>" + dataCompleta  ;
+
+
+
+        </script>
+
+    </center>
 </body>
+
 </html>
