--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 case Nota3 >= Nota1 && Nota1 >= Nota2:
                     Num = String(Nota3) + ", " + String(Nota1) + ", " + String(Nota2)
                     break;
-                default: "Nenhuma das notas corresponde ao requisito"
+                default: 
+                    Num = "Nenhuma das notas corresponde ao requisito"
                     break;
             }
 
