--- a/Quest4_PA.html
+++ b/Quest4_PA.html
@@ -43,6 +43,7 @@
                     retorno = "O funcionário " + NomeFuncionario + " fez uma venda de " + Vendas +" produtos. " 
                              + " </br> A comissão que o funcionário irá receber é de R$ 2,00 por produto." +
                             "<br> A comissão que ele receberá por suas vendas é de: " + "R$ " + comissao + ",00";
+                    break;
                 default:
                     retorno = "O número de vendas não está escrito corretamente"
                     break;
